# timber

./: .clang-tidy  .editorconfig  .gitlab-ci.yml  .travis.yml  README  README.md  config.h.in  meson.build  meson_options.txt  timber.c
docs/: meson.build  timber.1.in  timberrc.example
proto/: meson.build  timber.xml
src/: client.c  client.h  common.c  common.h  config.h.in  meson.build  timber.c  timber.h  wm.c  wm.h
